--- a/src/layout/header/header.scss
+++ b/src/layout/header/header.scss
@@ -36,15 +36,16 @@
         width: 100%;
         height: 100%;
         padding: 10px 2.2rem 10px 15px;
-        border: .5px solid #ccc;
+        border: .5px solid rgba(#ccc,.5);
         border-radius: 20px;
+        color: #fafafa;
       }
       i{
         position: absolute;
         right: 1rem;
         top: .7rem;
         font-size: 15px;
-        color:#ccc;
+        color:rgba(#ccc,.5);
       }
     }
     #header-nav-control{
