--- a/src/views/intro/createAccount/createAccount.scss
+++ b/src/views/intro/createAccount/createAccount.scss
@@ -1,4 +1,4 @@
-@import '../../sass/colors';
+@import '../../../sass/colors';
 
 #create-account{
   position: absolute;
@@ -8,18 +8,19 @@
   margin: auto;
   //border: 1px dashed;
   > a{
-    display: block;
-    &:first-child{
-      font-size: 1.17rem;
-      margin-bottom: .5rem;
-      i{ color:$secondary; }
-      + h4{
-        font-size: 1.5rem;
-        margin-bottom: 1rem;
-        color:$primary;
-      }
-    }
+    display: inline-block;
+    margin-bottom: .5rem;
+    color:$secondary; 
+    text-decoration: none;
+    i{ color:$secondary; }
   }
+
+  > h4{
+      margin-bottom: 1rem;
+      font-size: 1.5em;
+      color:$primary;
+  }
+  
 
   > input{
     margin-bottom: 1rem;
