--- a/src/components/avatar/avatar.scss
+++ b/src/components/avatar/avatar.scss
@@ -1,13 +1,13 @@
 @import '../../sass/colors';
 
 .avatar{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  //display: flex;
+  //justify-content: center;
+  //flex-wrap: wrap;
 
   > .img-avatar{
-    display: flex;
-    justify-content: center;
+    //display: flex;
+    //justify-content: center;
     width: 100%;
     //margin-bottom: 10px;
 
