--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -56,6 +56,7 @@
     //padding: 1rem;
     transition: .5s;
     display: flex;
+    flex-flow: row wrap;
     justify-content: center;
     align-content: center;
 
