--- a/src/views/profile/myProfile/myProfile.scss
+++ b/src/views/profile/myProfile/myProfile.scss
@@ -8,7 +8,7 @@
 
     &#user-data{
       display: flex;
-      flex-wrap: wrap;
+      flex-flow: wrap row;
       > .data{
         width: 0;
         flex-grow: 1;
@@ -16,7 +16,10 @@
         //width: 65%;
       }
       > .stats{
-        width: 35%;
+        width: 100%;
+        @media (min-width: 992px) {
+          width: 35%;
+        }
         //border:1px dashed black;
       }
     }
