--- a/src/components/stars/stars.scss
+++ b/src/components/stars/stars.scss
@@ -7,7 +7,7 @@
     display: inline-block;
     width: auto;
     margin-left: 5px;
-    font-size: 1.5rem;
+    font-size: 1.5rem !important;
     //cursor: pointer;
     > i{color: #ccc}
     &.active{
