--- a/src/views/intro/login/login.scss
+++ b/src/views/intro/login/login.scss
@@ -21,6 +21,11 @@
     //padding: .4rem 1rem;
     margin-bottom: 1rem; 
   }
+  .text-danger-login{
+    color: red;
+    margin-bottom: 1em;
+    margin-top: -1em;
+  }
   #login-controls{
     margin-top: .8rem;
     > div{
