--- a/src/layout/sidebar/sidebar.scss
+++ b/src/layout/sidebar/sidebar.scss
@@ -33,7 +33,9 @@
     
     .avatar{
       text-align: center;
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
+      padding-bottom: 1.5rem;
+      border-bottom: 1px solid #E5E2FF;
     }
 
     nav{
